# toot-worker

./: .gitignore  Cargo.toml  README.md  wrangler.toml
.github/workflows/: deploy.yml
src/: lib.rs
