[package]
name = "toot-worker"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.12.0", features = ["json"] }
serde = "1.0.171"
serde_json = "1.0.102"
worker = "0.4.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
